--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MainPage.xaml
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MainPage.xaml
@@ -8,8 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="Red">
-
-        <Button x:Name="MyMovies" x:Uid="btnMov" Grid.Row="1" Background="Gray" FontSize="40" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Center" Click="MyMovies_Click">My Movies</Button>
-
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Button x:Name="SearchMovies" x:Uid="btnSearchMov" Grid.Row="1" Background="Gray" FontSize="40" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Center" Click="SearchMovies_Click">Search Movies</Button>
+            <Button x:Name="MyMovies" x:Uid="btnMov" Grid.Row="1" Background="Gray" FontSize="40" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Center" Click="MyMovies_Click">My Movies</Button>
+        </StackPanel>
     </Grid>
 </Page>
