--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MyMovies.xaml
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MyMovies.xaml
@@ -13,13 +13,23 @@
         <converters:ObjectExistsToVisible x:Key="ObjectExistsToVisible" />
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="Auto"/>
-    </Grid.ColumnDefinitions>
+    <Grid Background="Red">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Orientation="Vertical">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="2*" />
+        </Grid.RowDefinitions>
+        <Grid/>
+
+        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="0">
+            <TextBlock>My Movie List</TextBlock>
+        </StackPanel>
+
+        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical">
             <ListView  x:Name="MainList" 
               ItemsSource="{x:Bind viewTitles.Titles, Mode=OneWay}"  
               SelectedIndex="{x:Bind viewTitles.SelectedIndex, Mode=TwoWay}" 
@@ -33,12 +43,14 @@
             <Button Content="Add" Click="{x:Bind  viewTitles.Add}" Margin="5"/>
         </StackPanel>
 
-        <StackPanel x:Name="myPanel" Grid.Column="2" Orientation="Vertical" Visibility="{x:Bind viewTitles.SelectedMovie, Mode=OneWay,Converter={StaticResource ObjectExistsToVisible}}" >
+        <StackPanel x:Name="myPanel" Grid.Column="2" Grid.Row="1" Orientation="Vertical" Visibility="{x:Bind viewTitles.SelectedMovie, Mode=OneWay,Converter={StaticResource ObjectExistsToVisible}}" >
+            <StackPanel>
+                <TextBlock>Title:</TextBlock>
+                <TextBox Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue=''}" Margin="5" />
+            </StackPanel>
+
             <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue=''}" 
-              Margin="5" />
-            <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue='0'}" 
+              Text="{x:Bind viewTitles.SelectedMovie.Year, Mode=TwoWay, FallbackValue='0'}" 
               Margin="5" />
 
             <TextBox 
@@ -46,13 +58,18 @@
               Margin="5" />
 
             <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue='0'}" 
+              Text="{x:Bind viewTitles.SelectedMovie.Rated, Mode=TwoWay, FallbackValue='0'}" 
+              Margin="5" />
+
+            <TextBox 
+              Text="{x:Bind viewTitles.SelectedMovie.Released, Mode=TwoWay, FallbackValue='0'}" 
               Margin="5" />
 
             <!--<Image Source="{x:Bind viewTitles.SelectedMovie.Image, Mode=OneWay}" Stretch="UniformToFill" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5"/>-->
 
             <Button Content="Delete" Click="{x:Bind viewTitles.Delete}" Margin="5" />
         </StackPanel>
-
+    
     </Grid>
 </Page>
+
