--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MainPage.xaml
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MainPage.xaml
@@ -8,9 +8,23 @@
     mc:Ignorable="d">
 
     <Grid Background="Red">
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button x:Name="SearchMovies" x:Uid="btnSearchMov" Grid.Row="1" Background="Gray" FontSize="40" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Center" Click="SearchMovies_Click">Search Movies</Button>
-            <Button x:Name="MyMovies" x:Uid="btnMov" Grid.Row="1" Background="Gray" FontSize="40" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Center" Click="MyMovies_Click">My Movies</Button>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width=".5*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="0.5*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="2*" />
+        </Grid.RowDefinitions>
+        <Grid/>
+
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" FontFamily="arial">My Movies</TextBlock>
+        
+        <StackPanel Grid.Column="1" Grid.Row="1"  HorizontalAlignment="Center" VerticalAlignment="Center" >
+            <Button x:Name="SearchMovies" x:Uid="btnSearchMov" Grid.Row="1" Background="Gray" FontSize="30" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10" Click="SearchMovies_Click">Search Movies</Button>
+            <Button x:Name="MyMovies" x:Uid="btnMov" Grid.Row="1" Background="Gray" FontSize="30" FontFamily="arial"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="10" Click="MyMovies_Click">My Movies</Button>
         </StackPanel>
     </Grid>
 </Page>
