--- a/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MyMovies.xaml
+++ b/OMDBApiMobileAppsProject/OMDBApiMobileAppsProject/MyMovies.xaml
@@ -17,7 +17,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="0.5*" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
@@ -30,47 +30,100 @@
             <TextBlock>My Movie List</TextBlock>
         </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center">
-            <ListView  x:Name="MainList" 
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="0" Grid.Row="1">
+            <StackPanel Grid.Column="0" Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center">
+                <ListView  x:Name="MainList" 
               ItemsSource="{x:Bind viewTitles.Titles, Mode=OneWay}"  
               SelectedIndex="{x:Bind viewTitles.SelectedIndex, Mode=TwoWay}" 
               MinWidth="250" Margin="5">
-                <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="viewModels:MovieViewModel" >
-                        <TextBlock Text="{x:Bind Title, Mode=OneWay}" />
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <Button Content="Add" Click="{x:Bind  viewTitles.Add}" Margin="5"/>
-        </StackPanel>
-
-        <StackPanel x:Name="myPanel" Grid.Column="1" Grid.Row="1" Orientation="Vertical" Visibility="{x:Bind viewTitles.SelectedMovie, Mode=OneWay,Converter={StaticResource ObjectExistsToVisible}}" >
-            <StackPanel>
-                <TextBlock>Title:</TextBlock>
-                <TextBox Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue=''}" Margin="5" />
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="viewModels:MovieViewModel" >
+                            <TextBlock Text="{x:Bind Title, Mode=OneWay}" />
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Button Content="Add" Click="{x:Bind  viewTitles.Add}" Margin="5"/>
             </StackPanel>
+        </ScrollViewer>
 
-            <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Year, Mode=TwoWay, FallbackValue='0'}" 
-              Margin="5" />
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="1" Grid.Row="1">
+            <StackPanel x:Name="myPanel" Grid.Column="1" Grid.Row="1" Orientation="Vertical" Visibility="{x:Bind viewTitles.SelectedMovie, Mode=OneWay,Converter={StaticResource ObjectExistsToVisible}}" >
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Title:</TextBlock>
+                    <TextBox Text="{x:Bind viewTitles.SelectedMovie.Title, Mode=TwoWay, FallbackValue=''}" Margin="5" />
+                </StackPanel>
 
-            <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Activity, Mode=TwoWay, FallbackValue=''}" 
-              Margin="5" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Year:</TextBlock>
+                    <TextBox Text="{x:Bind viewTitles.SelectedMovie.Year, Mode=TwoWay, FallbackValue='0'}"  Margin="5" />
+                </StackPanel>
 
-            <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Rated, Mode=TwoWay, FallbackValue='0'}" 
-              Margin="5" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Rated:</TextBlock>
+                    <TextBox Text="{x:Bind viewTitles.SelectedMovie.Rated, Mode=TwoWay, FallbackValue='0'}"  Margin="5" />
+                </StackPanel>
 
-            <TextBox 
-              Text="{x:Bind viewTitles.SelectedMovie.Released, Mode=TwoWay, FallbackValue='0'}" 
-              Margin="5" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Runtime:</TextBlock>
+                    <TextBox Text="{x:Bind viewTitles.SelectedMovie.Runtime, Mode=TwoWay, FallbackValue='0'}" Margin="5" />
+                </StackPanel>
 
-            <!--<Image Source="{x:Bind viewTitles.SelectedMovie.Image, Mode=OneWay}" Stretch="UniformToFill" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5"/>-->
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Genre:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Genre, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
 
-            <Button Content="Delete" Click="{x:Bind viewTitles.Delete}" Margin="5" />
-        </StackPanel>
-    
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Director:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Director, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Writer:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Writer, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Actors:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Actors, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Plot:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Plot, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Language:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Language, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Country:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Country, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Awards:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Awards, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">Metascore:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.Metascore, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock VerticalAlignment="Center" Margin="5" MinWidth="70">imdbRating:</TextBlock>
+                    <TextBox  Text="{x:Bind viewTitles.SelectedMovie.imdbRating, Mode=TwoWay, FallbackValue=''}"  Margin="5" />
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="Delete" Click="{x:Bind viewTitles.Delete}" Margin="5" />
+                    <Image Source="{x:Bind viewTitles.SelectedMovie.Poster, Mode=OneWay,FallbackValue='Assets/SplashScreen.png'}" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5" Grid.Column="2" Grid.Row="1"/>
+                </StackPanel>
+
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
 
